# wifi

./: AGENTS.md  Cargo.toml  LICENSE  README.md
docs/: AI_CONTEXT.md  ARCHITECTURE.md  PROJECT_OVERVIEW.md  README.md  ROADMAP.md
docs/AREAS/: README.md  api.md  platform-linux.md  platform-windows.md  types.md
docs/DECISIONS/: 0001-initial-architecture.md  README.md  decision-template.md
examples/: audit.rs  connectivity.rs  scan.rs
src/: interface.rs  lib.rs  types.rs  wifi.rs
src/platform/: dummy.rs  linux.rs  mod.rs
src/platform/windows/: connectivity.rs  conv.rs  ipconfig.rs  mod.rs  profile.rs  radio.rs
